--- a/BlazorTimer/Pages/Counter.razor
+++ b/BlazorTimer/Pages/Counter.razor
@@ -32,7 +32,7 @@
         public async void StartTimerAsync() {
 
         //une boucle while pour décrémenter la valeur du Time d'un nombre jusqu'à ce qu'il
-        //soit inférieur ou égal à 0
+        //soit strictement inférieur à 0
             while (Time > 0) {
                 Time--;
                 StateHasChanged();
